# cool_novel_downloader

./: .gitignore  Cargo.toml  README.md
src/: fetcher.rs  main.rs
