[package]
name = "cool_novel_fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "*", features = ["backtrace"] }
env_logger = "*"
tokio = { version = "*", features = ["full"] }
log = "*"
reqwest = "*"
chrono = "*"
kuchiki = "*"
async-trait = "*"
